--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -30,6 +30,8 @@ dlopen = "0.1.8"
 rand = "0.7.3"
 sourcemap = "6.0.1"
 sys-info = "0.7.0"
+tungstenite = "0.11.1"
+curl = "0.4.34"
 
 [dependencies]
 downcast-rs = "1.1.1"
@@ -50,3 +52,5 @@ dlopen = "0.1.8"
 rand = "0.7.3"
 sourcemap = "6.0.1"
 sys-info = "0.7.0"
+tungstenite = "0.11.1"
+curl = "0.4.34"
