--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -17,7 +17,7 @@ futures = "0.3.5"
 lazy_static = "1.4.0"
 libc = "0.2.71"
 log = "0.4.8"
-rusty_v8 = {version = "0.12.0", path = "../rusty_v8"}
+rusty_v8 = {version = "0.13.0", path = "../rusty_v8"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0.55", features = [ "preserve_order" ] }
 smallvec = "1.4.0"
@@ -31,7 +31,8 @@ rand = "0.7.3"
 sourcemap = "6.0.1"
 sys-info = "0.7.0"
 tungstenite = "0.11.1"
-curl = "0.4.34"
+reqwest = { version = "0.10", features = ["blocking", "json"] }
+
 
 [dependencies]
 downcast-rs = "1.1.1"
@@ -39,7 +40,7 @@ futures = "0.3.5"
 lazy_static = "1.4.0"
 libc = "0.2.71"
 log = "0.4.8"
-rusty_v8 = {version = "0.12.0", path = "../rusty_v8"}
+rusty_v8 = {version = "0.13.0", path = "../rusty_v8"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0.55", features = [ "preserve_order" ] }
 smallvec = "1.4.0"
@@ -53,4 +54,5 @@ rand = "0.7.3"
 sourcemap = "6.0.1"
 sys-info = "0.7.0"
 tungstenite = "0.11.1"
-curl = "0.4.34"
+reqwest = { version = "0.10", features = ["blocking", "json"] }
+
