--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -32,7 +32,7 @@ sourcemap = "6.0.1"
 sys-info = "0.7.0"
 tungstenite = "0.11.1"
 reqwest = { version = "0.10", features = ["blocking", "json"] }
-
+openssl-sys = "0.9.59"
 
 [dependencies]
 downcast-rs = "1.1.1"
@@ -55,4 +55,5 @@ sourcemap = "6.0.1"
 sys-info = "0.7.0"
 tungstenite = "0.11.1"
 reqwest = { version = "0.10", features = ["blocking", "json"] }
-
+openssl = { version = "0.10", features = ["vendored"] }
+openssl-sys = "0.9.59"
