--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -31,7 +31,7 @@ rand = "0.7.3"
 sourcemap = "6.0.1"
 sys-info = "0.7.0"
 tungstenite = "0.11.1"
-reqwest = { version = "0.11.1", features = ["blocking", "json"] }
+ureq = "2.0.0"
 openssl-sys = "0.9.59"
 
 [dependencies]
@@ -54,6 +54,6 @@ rand = "0.7.3"
 sourcemap = "6.0.1"
 sys-info = "0.7.0"
 tungstenite = "0.11.1"
-reqwest = { version = "0.11.1", features = ["blocking", "json"] }
+ureq = "2.0.0"
 openssl = { version = "0.10", features = ["vendored"] }
 openssl-sys = "0.9.59"
