--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ serde_json = { version = "1.0.64", features = ["preserve_order"] }
 byteorder = "1.4.2"
 smallvec = "1.4.0"
 openssl-sys = "0.9.59"
+ureq = "2.0.0"
+tungstenite = "0.11.1"
 
 rusty_v8 = {version = "0.22.2", path = "./rusty_v8"}
 deno_core = {path = "./deno/core", version = "0.88.0"}
