--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deno"]
 	path = deno
 	url = https://github.com/lsg2020/deno
+[submodule "serde_v8"]
+	path = serde_v8
+	url = https://github.com/lsg2020/serde_v8
