support plat macosx

--- a/.cargo/config
+++ b/.cargo/config
@@ -1,2 +1,5 @@
 [target.x86_64-pc-windows-msvc]
 rustflags = ["-C", "target-feature=+crt-static"]
+
+[target.x86_64-apple-darwin]
+rustflags = ["-Clink-args=-undefined dynamic_lookup"]
